# bangscript

./: .envrc  Cargo.toml  flake.nix  guix.py  package.nix  readme  script.py  shell.nix  test.sh
src/: main.rs
