[package]
name = "bangscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bs"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
eyre = "0.6.12"
nix = { version = "0.29.0", features = ["fs"] }
